--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <div id="joystick"></div>
   </div>
 
+  <div id="endScreen">
+    <h2 id="endText"></h2>
+    <button id="restartButton">Перезапустить / Restart</button>
+  </div>
+
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
